--- a/3100f23.html
+++ b/3100f23.html
@@ -121,6 +121,11 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="assignment-list">
+
+
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #4</span><span class="col-md-2 due-date">due date TBA</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/hw4.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
+
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #1 review sheet/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/exam1review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
 
@@ -148,7 +153,7 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
-                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/20/span><span class="course-task col-md-10"> All Cauchy sequences converge. 
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/20</span><span class="course-task col-md-10"> All Cauchy sequences converge. 
                                                         Definition of the least upper bound. Statement of the Least Upper Bound Property of the real numbers: Every nonempty subset of $\<mathbb>R</mathbb>$ that is bounded above has a least upper bound. Sketch of a proof that $\sqrt{2}$ exists  in the real numbers based on the Least Upper Bound Property.
                                                     </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/18</span><span class="course-task col-md-10"> Every sequence has a convergent subsequence.
