--- a/research.html
+++ b/research.html
@@ -3048,6 +3048,16 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                                                 <ul class="paper-list list">
                                                     <li class="col-sm-12 list-item with-bullet">
                                                         <div class="col-sm-10">
+                                                            <h4>    <span class="paper-title">Unique factorization: what not everyone knows</span>
+                                                            </h4>
+                                                            <p><span>Dartmouth Colloquium; September 2023
+                                                            </span></p>
+                                                        </div>
+                                                        <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/dartmouth23v3.pdf" target="_blank" class="btn btn--sm btn-pdf">Slides</a></div>
+                                                    </li>
+
+                                                    <li class="col-sm-12 list-item with-bullet">
+                                                        <div class="col-sm-10">
                                                             <h4>    <span class="paper-title">Some distribution problems concerning arithmetic functions</span>
                                                             </h4>
                                                             <p><span>LSU Number Theory Seminar; October 2022
