--- a/3100f23.html
+++ b/3100f23.html
@@ -121,7 +121,7 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="assignment-list">
-                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Final exam sheet/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/finalreview.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Final exam review sheet/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/finalreview.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #3 review sheet/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/exam3review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
