--- a/3100s24.html
+++ b/3100s24.html
@@ -66,8 +66,8 @@
                                             <i class="pp-icon-doc icon icon--lg"></i> Courses
                                         </a>
                                       <ul>
-                                            <li><a href="3100f23.html">MATH 3100</a></li>
-                                            <li><a href="8440f23.html">MATH 8440</a></li>
+                                            <li><a href="3100s24.html">MATH 3100</a></li>
+                                            <li><a href="4000s24.html">MATH 4000/6000</a></li>
                                         
                                         </ul>
                                     </li>
@@ -225,7 +225,7 @@ Both at office hours and in class, you should expect that your input will be tre
                                                 </p>
                                                 <p><strong>On homework, collaboration is allowed</strong> and in fact is very much encouraged. Mathematics wouldn't be nearly as much fun if we couldn't talk about it with other people! However, copying (from a textbook or another student), web searches, and AI tools (such as ChatGPT) are not allowed, and you must write your own final solutions independently. Keep in mind that by entering UGA, you have already agreed to abide by the UGA Honor code described in detail at <a href="https://honesty.uga.edu/Academic-Honesty-Policy/">https://honesty.uga.edu/Academic-Honesty-Policy/</a>.
                                                 </p>
-                                                <p>In practice, what this means that you may discuss homework problems and their solutions with your classmates, but you may not turn in a solution unless you understand it yourself. A reasonable rule of thumb is that you should be able to explain your solutions verbally to me (in all their gory detail) if requested to do
+                                                <p>In practice, what this means is that you may discuss homework problems and their solutions with your classmates, but you may not turn in a solution unless you understand it yourself. A reasonable rule of thumb is that you should be able to explain your solutions verbally to me (in all their gory detail) if requested to do
                                                     so.
                                                 </p>
                                             </div>
