--- a/research.html
+++ b/research.html
@@ -2791,7 +2791,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     <div class="col-sm-10">
                         <h4>    <span class="paper-title">Partitioning powers into sets of equal sum</span>  <span class="paper-author">(w/ E. Treviño)</span>          </h4>
                         <p>
-                            <a href="https://rmmc.asu.edu/rmj/rmj.html"><span class="journal-name">Rocky Mountain J. Math./span></a> (<span class="paper-year">to appear</span>)</p>
+                            <a href="https://rmmc.asu.edu/rmj/rmj.html"><span class="journal-name">Rocky Mountain J. Math.</span></a> (<span class="paper-year">to appear</span>)</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/partitioningpowers.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
