--- a/4000s24.html
+++ b/4000s24.html
@@ -117,10 +117,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">     
                                                 <p>Watch this space!</p>                                     
-                                                  <!-- <ul class="course-summary-to-date">
-                                            	<li class="with-bullet"><span class="col-md-9 assignment-name">Handout on properties of the integers</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s22/integers.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                  <ul class="course-summary-to-date">
+                                            	<li class="with-bullet"><span class="col-md-9 assignment-name">Printable syllabus</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/syllabus.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
-                                                </ul> -->
+                                                </ul>
                                             </div>
                                         </div>
                                         <div class="module-block row">
