--- a/4000s24.html
+++ b/4000s24.html
@@ -129,6 +129,9 @@
                                                 <h6>Semester-to-date summary (reverse chronological order)</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
+                                                <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">1/10</span><span class="course-task col-md-10"> Fundamental Properties of $\mathbb{Z}$, continued. Proofs that $-(-a)=a$ and $a \cdot 0 = 0$.</span></li>
+
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/8</span><span class="course-task col-md-10">Review of syllabus. Fundamental properties of $\mathbb{Z}$. </span></li>
                                                 </ul>
                                             </div>
