--- a/3100s24.html
+++ b/3100s24.html
@@ -128,6 +128,8 @@
                                                 <h6>Semester-to-date summary (reverse chronological order)</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
+                                                <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">1/10</span><span class="course-task col-md-10">Review of induction. </span></li>
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/8</span><span class="course-task col-md-10">Go over syllabus. What is a sequence? </span></li>
                                                 </ul>
                                             </div>
