--- a/4000s24.html
+++ b/4000s24.html
@@ -116,7 +116,8 @@
                                                 <h6>Assignments and other course material</h6>
                                             </div>
                                             <div class="module-content col-sm-9">                                     
-                                                  <ul class="course-summary-to-date">
+                                                  <ul class="course-summary-to-date">   <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #1</span><span class="col-md-2 due-date">due 1/22</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw1.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                  </li>
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">$\mathbb{Z}$ axioms handout</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/integers.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
                                             	<li class="with-bullet"><span class="col-md-9 assignment-name">Printable syllabus</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/syllabus.docx" class="btn btn--sm btn-pdf">DOCX</a></span>
@@ -130,6 +131,7 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">1/10</span><span class="course-task col-md-10"> More deductions from the fundamental properties: $a(-1)=-a$ and $(-1)a=-a$, rules for inequalities, $1$ is the least positive integer. Principle of Mathematical Induction as a consequence of WOP.</span></li>
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/10</span><span class="course-task col-md-10"> Fundamental Properties of $\mathbb{Z}$, continued. Proofs that $-(-a)=a$ and $a \cdot 0 = 0$.</span></li>
 
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/8</span><span class="course-task col-md-10">Review of syllabus. Fundamental properties of $\mathbb{Z}$. </span></li>
