--- a/3100s24.html
+++ b/3100s24.html
@@ -132,6 +132,8 @@
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
                                                     
+                                                    <li class="with-bullet"><span class="course-date col-md-1">1/17</span><span class="course-task col-md-10">Sequences as functions. The graph of a sequence. Increasing and decreasing sequences. $\{a_n\}$ increasing implies $a_n \le a_m$ whenever $n\le m$. Definitions of bounded above and below.</span></li>
+                                                    
                                                     <li class="with-bullet"><span class="course-date col-md-1">1/12</span><span class="course-task col-md-10">Induction with a different base case. Strong induction (complete induction).</span></li>
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/10</span><span class="course-task col-md-10">Review of induction. </span></li>
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/8</span><span class="course-task col-md-10">Go over syllabus. What is a sequence? </span></li>
