--- a/4000s24.html
+++ b/4000s24.html
@@ -131,7 +131,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
-                                                <li class="with-bullet"><span class="course-date col-md-1">1/10</span><span class="course-task col-md-10"> More deductions from the fundamental properties: $a(-1)=-a$ and $(-1)a=-a$, rules for inequalities, $1$ is the least positive integer. Principle of Mathematical Induction as a consequence of WOP.</span></li>
+                                                    <li class="with-bullet"><span class="course-date col-md-1">1/17</span><span class="course-task col-md-10"> Exponentiation. Pascal's triangle and the binomial theorem. Statement of Division algorithm. </span></li>    
+                                                <li class="with-bullet"><span class="course-date col-md-1">1/12</span><span class="course-task col-md-10"> More deductions from the fundamental properties: $a(-1)=-a$ and $(-1)a=-a$, rules for inequalities, $1$ is the least positive integer. Principle of Mathematical Induction as a consequence of WOP.</span></li>
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/10</span><span class="course-task col-md-10"> Fundamental Properties of $\mathbb{Z}$, continued. Proofs that $-(-a)=a$ and $a \cdot 0 = 0$.</span></li>
 
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/8</span><span class="course-task col-md-10">Review of syllabus. Fundamental properties of $\mathbb{Z}$. </span></li>
