--- a/3100s24.html
+++ b/3100s24.html
@@ -120,6 +120,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">                                     
                                                   <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #1</span><span class="col-md-2 due-date">due 1/31</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100s24/hw2.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li> 
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #1</span><span class="col-md-2 due-date">due 1/22</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100s24/hw1.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
                                             	<li class="with-bullet"><span class="col-md-9 assignment-name">Printable syllabus</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100s24/syllabus.docx" class="btn btn--sm btn-pdf">DOCX</a></span>
