--- a/3100s24.html
+++ b/3100s24.html
@@ -135,6 +135,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    
+                                                    <li class="with-bullet"><span class="course-date col-md-1">1/24</span><span class="course-task col-md-10"> If $a_n=c$ for all $n$, then $a_n\to c$. If $a_n=1/n$ for all $n$, then $\lim a_n=0$. The sequence $\{(-1)^n\}$ diverges. If $a_n\to L$ and $a_n\to M$, where $L$ and $M$ are real numbers, then $L=M$.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">1/22</span><span class="course-task col-md-10">Eventually increasing. The sum of two eventually increasing sequences is eventually increasing. Motivating the definition of convergence.
                                                     </span></li>
 
