--- a/3100s24.html
+++ b/3100s24.html
@@ -120,7 +120,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">                       
                                                   <ul class="course-summary-to-date">
-
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #6</span><span class="col-md-2 due-date">due 4/3</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100s24/hw6.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li> 
 
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #2 learning objectives/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100s24/exam2review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li> 
@@ -151,6 +152,11 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">3/27</span><span class="course-task col-md-10"> 
+                                                        Proving continuity from the $\epsilon$-$\delta$ definition. The sequential criterion for continuity.
+                                                    </span></li>
+
+
                                                 <li class="with-bullet"><span class="course-date col-md-1">3/25</span><span class="course-task col-md-10"> 
                                                     Completion of the proof of the theorem on the form of the DOC. Introduction to continuity. Geometric interpretation of continuity.
                                                 </span></li>
