--- a/4000s24.html
+++ b/4000s24.html
@@ -152,7 +152,10 @@
                                             <div class="module-content col-sm-9">
 
                                                 <ul class="course-summary-to-date">
-
+                                                    <li class="with-bullet"><span class="course-date col-md-1">3/27</span><span class="course-task col-md-10"> 
+                                                        Exam #2.
+                                                        </span></li>
+    
                                                     <li class="with-bullet"><span class="course-date col-md-1">3/25</span><span class="course-task col-md-10"> 
                                                     Definition of a homomorphism. Homomorphisms send $0$ to $0$ and preserve additive inverses. The kernel is trivial if and only if the homomorphism is injective. Definition of an ideal of a (commutative) ring.
                                                     </span></li>
