--- a/4000s24.html
+++ b/4000s24.html
@@ -152,6 +152,11 @@
                                             <div class="module-content col-sm-9">
 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">3/29</span><span class="course-task col-md-10"> 
+                                                        Every ideal of $\mathbb{Z}$ is principal. Every ideal of $F[x]$ ($F$ a field) is principal. Not every ideal of  $\mathbb{Z}[x]$ is principal. Every ideal of $\mathbb{Z}$ is the kernel of a homomorphism from $\Z$ to somewhere.
+                                                        </span></li>
+    
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">3/27</span><span class="course-task col-md-10"> 
                                                         Exam #2.
                                                         </span></li>
