--- a/4000s24.html
+++ b/4000s24.html
@@ -119,6 +119,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">                                     
                                                   <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #6</span><span class="col-md-2 due-date">due 4/8</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw6.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li> 
+
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #2 learning objectives/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/exam2review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li> 
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #5</span><span class="col-md-2 due-date">due <del>3/18</del> 3/20</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
@@ -152,6 +155,12 @@
                                             <div class="module-content col-sm-9">
 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">4/1</span><span class="course-task col-md-10"> 
+                                                        Construction of the quotient ring $R/I$. Example of $F[x]/\langle f(x)\rangle$. If $f$ has degree $n\ge 1$, then every element of $F[x]/\langle f(x)\rangle$ has the form $\overline{a_0+a_1 x + \dots + a_{n-1} x^{n-1}}$ for some $a_i \in F$.
+                                                        </span></li>
+    
+
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">3/29</span><span class="course-task col-md-10"> 
                                                         Every ideal of $\mathbb{Z}$ is principal. Every ideal of $F[x]$ ($F$ a field) is principal. Not every ideal of  $\mathbb{Z}[x]$ is principal. Every ideal of $\mathbb{Z}$ is the kernel of a homomorphism from $\mathbb{Z}$ to somewhere.
                                                         </span></li>
