--- a/3100s24.html
+++ b/3100s24.html
@@ -153,7 +153,7 @@
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/1</span><span class="course-task col-md-10"> 
-                                                        Intermediate value theorem. 
+                                                        Statement and proof of the intermediate value theorem.
                                                     </span></li>
 
 
