--- a/4000s24.html
+++ b/4000s24.html
@@ -155,10 +155,15 @@
                                             <div class="module-content col-sm-9">
 
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-md-1">4/5</span><span class="course-task col-md-10"> 
+                                                        Introduction to isomorphisms. Conjugation is a nontrivial automorphism of $\mathbb{C}$. There is no nontrivial autmorphism of $\mathbb{Z}_p$. There is a nontrivial automorphism of $\mathbb{Z}_2[x]/\langle x^2+x+1\rangle$. The Freshman's Dream!
+                                                        </span></li>    
+
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/3</span><span class="course-task col-md-10"> 
                                                         Computing in $F[x]/\langle f(x)\rangle$. If $f(x)$ is reducible, then $F[x]/\langle f(x)\rangle$ is not a domain. If $f(x)$ is irreducible, then $F[x]/\langle f(x)\rangle$ is a field.
-                                                        </span></li>
-    
+                                                        </span></li>    
 
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/1</span><span class="course-task col-md-10"> 
                                                         Construction of the quotient ring $R/I$. Example of $F[x]/\langle f(x)\rangle$. If $f$ has degree $n\ge 1$, then every element of $F[x]/\langle f(x)\rangle$ has the form $\overline{a_0+a_1 x + \dots + a_{n-1} x^{n-1}}$ for some $a_i \in F$.
