--- a/3100s24.html
+++ b/3100s24.html
@@ -152,9 +152,13 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">4/5</span><span class="course-task col-md-10"> 
+                                                       Definition of $\lim_{x\to a^{S}} f(x)=L$. Special cases: $\lim_{x\to a} f(x)=L$, $\lim_{x\to a^{+}} f(x)=L$, $\lim_{x\to a^{-}} f(x)=L$. (Here $a \in \mathbb{R}$ and $L \in \mathbb{R} \cup \{\pm\infty\}$.)
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/3</span><span class="course-task col-md-10"> 
                                                         Statement and proof of the Maximum Value Theorem. A continuous function on a closed interval has image a closed interval (possibly degenerate: a single point).
-                                                    </span></li>
+                                                     </span></li>
 
 
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/1</span><span class="course-task col-md-10"> 
