--- a/4000s24.html
+++ b/4000s24.html
@@ -119,6 +119,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">                                     
                                                   <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #7</span><span class="col-md-2 due-date">due 4/17</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw7.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li> 
+
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #6</span><span class="col-md-2 due-date">due 4/8</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw6.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li> 
 
@@ -155,6 +158,11 @@
                                             <div class="module-content col-sm-9">
 
                                                 <ul class="course-summary-to-date">
+
+
+                                                    <li class="with-bullet"><span class="course-date col-md-1">4/7</span><span class="course-task col-md-10"> 
+                                                        Direct product of rings. $\Z_{mn} \cong \Z_m \times \Z_n$ when $m$ and $n$ are relatively prime.
+                                                        </span></li> 
 
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/5</span><span class="course-task col-md-10"> 
                                                         Introduction to isomorphisms. Conjugation is a nontrivial automorphism of $\mathbb{C}$. There is no nontrivial autmorphism of $\mathbb{Z}_p$. There is a nontrivial automorphism of $\mathbb{Z}_2[x]/\langle x^2+x+1\rangle$. The Freshman's Dream!
