--- a/4000s24.html
+++ b/4000s24.html
@@ -161,11 +161,11 @@
 
                                                 <ul class="course-summary-to-date">
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/10</span><span class="course-task col-md-10"> 
-                                                        $\mathbb{Z}_{mn}\not\cong \mathbb{Z}_m\times \mathbb{Z}_n$ when $\gcd(m,n)=1$. Statement of the Fundamental Homomorphism Theorem. $\mathbb{Z}_{10}/\{0,5} \cong \mathbb{Z}_5$. If $F$ is a subfield in $K$, and $\alpha \in K$ is a root of the irreducible polynomial $p(x) \in F[x]$, then $F[x]/\langle p(x)\rangle \cong F[\alpha]$.
+                                                        $\mathbb{Z}_{mn}\not\cong \mathbb{Z}_m\times \mathbb{Z}_n$ when $\gcd(m,n)=1$. Statement of the Fundamental Homomorphism Theorem. $\mathbb{Z}_{10}/\{0,5\} \cong \mathbb{Z}_5$. If $F$ is a subfield in $K$, and $\alpha \in K$ is a root of the irreducible polynomial $p(x) \in F[x]$, then $F[x]/\langle p(x)\rangle \cong F[\alpha]$.
                                                         </span></li> 
 
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/8</span><span class="course-task col-md-10"> 
-                                                        Direct product of rings. $\Z_{mn} \cong \Z_m \times \Z_n$ when $m$ and $n$ are relatively prime.
+                                                        Direct product of rings. $\mathbb{Z}_{mn} \cong \mathbb{Z}_m \times \mathbb{Z}_n$ when $m$ and $n$ are relatively prime.
                                                         </span></li> 
 
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/5</span><span class="course-task col-md-10"> 
